deploy/gocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: gocd
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-gocd-redirect
  namespace: gocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.gocd.deagwon.com`)
      kind: Rule
      services:
        - name: gocd-dashboard
          port: 9097
      middlewares:
        - name: redirectscheme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-gocd
  namespace: gocd
  annotations:
    cert-manager.io/issuer: gocd-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.gocd.deagwon.com`)
      kind: Rule
      services:
        - name: gocd-server
          port: 8153
  tls:
    secretName: gocd-crt-secret
